# crown_point

./: .gitignore
Gallery/: article.html  background.html  index.html  schedule.html  space.html
Gallery/admin/: config.yml  index.html
Gallery/favicon/: site.webmanifest
Gallery/static/: article.js  main.js  style.css
Sentinel/: .env  .gitignore  main.py  pyproject.toml  railway.toml
Sentinel/src/gatekeeper/: gatekeeper.py
Sentinel/src/gatekeeper/send_mail/: send_mail.py
gatekeeper/: .env  .gitignore  go.mod  go.sum  main.go
realm/: App.tsx  README.md  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
realm/components/audit/: AuditForm.tsx  AuditItem.tsx
realm/components/dashboard/: Dashboard.tsx
realm/components/layout/: Navigation.tsx
realm/components/shared/: Atomic.tsx
realm/services/: excelService.ts  storageService.ts
